fixed issue with header not showing on page load, and added header css transition

--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -270,6 +270,7 @@ object[data-swfid] {
     font-size: 110%;
     z-index: 100;
     color: #878787;
+    transition: top 0.16s ease;
     
     svg,
     img {
